# Datalink

./: Cargo.toml  LICENSE  Makefile  README.md
Datalink/: Cargo.toml  build.rs
Datalink/src/: dbus_handler.rs  env_handler.rs  main.rs
datalink-bridge-config/: Cargo.toml  README.md
datalink-bridge-config/examples/: create_acc_config.rs
datalink-bridge-config/src/: lib.rs  test.rs
datalink-memmap-config/: Cargo.toml  README.md
datalink-memmap-config/examples/: create_acc_config.rs
datalink-memmap-config/src/: lib.rs  test.rs
datalink-shm-bridge/: Cargo.toml
datalink-shm-bridge/src/: main.rs  mmap.rs  presets.rs  process_detection.rs
