[package]
name = "datalink-memmap-config"
version = "0.1.0"
authors = ["Lukas Lichten <lichtenrider98@gmail.com>"]
description = "Defines the struct for the Datalink json file, and wrapper for writing it"
license = "MIT"
repository = "https://github.com/LukasLichten/Datalink"
edition = "2021"

[features]
proton = ["dep:proton-finder"]

[dependencies]
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
proton-finder = { version = "^1.0", optional = true }
dirs = "^5.0"
