[package]
name = "datalink-memmap-config"
version = "0.1.0"
edition = "2021"

authors = ["Lukas Lichten <lichtenrider98@gmail.com>"]
description = "Defines the struct for the Datalink json file, and wrapper for writing it"
readme = "README.md"
license = "MIT"
repository = "https://github.com/LukasLichten/Datalink"
keywords = ["steam","proton","wine"]
categories = ["parser-implementations"]


[features]
proton = ["dep:proton-finder"]

[dev-dependencies]
proton-finder = "^1.1"

[dependencies]
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
proton-finder = { version = "^1.1", optional = true }
dirs = "^5.0"
