[package]
name = "datalink-shm-bridge"
version = "0.1.0"
edition = "2021"

[dependencies]
datalink-bridge-config = { path = "../datalink-bridge-config" }
# ctrlc = { version = "^3.4", features = ["termination"] }
windows = { version = "^0.58", features = [
   "Wdk_System_SystemServices",
   "Win32_Foundation",
   "Win32_Security",
   "Win32_Storage_FileSystem",
   "Win32_System_Memory",
]}
